management inventory finish