@@ -2,13 +2,17 @@ package com.pipiris.tienda.service.impl;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.pipiris.tienda.dto.inventario.InventarioRequestDTO;
 import com.pipiris.tienda.dto.inventario.InventarioResponseDTO;
+import com.pipiris.tienda.dto.inventario.InventarioVariantDTO;
+import com.pipiris.tienda.dto.inventario.InventarioProductoResponseDTO;
 import com.pipiris.tienda.dto.inventario.ReabastecerProductoDTO;
 import com.pipiris.tienda.mapper.InventarioMapper;
+import com.pipiris.tienda.mapper.InventarioProductoMapper;
 import com.pipiris.tienda.model.Inventario;
 import com.pipiris.tienda.model.Producto;
 import com.pipiris.tienda.repository.InventarioRepository;
@@ -24,33 +28,39 @@ import jakarta.transaction.Transactional;
 public class InventarioServiceImpl implements InventarioService{
 	
 	private final InventarioRepository inventarioRepo;
+	private final InventarioProductoMapper inventarioProMap;
 	private final InventarioMapper inventarioMap;
 	private final ProductoRepository productoRepo;
 	
-	public InventarioServiceImpl(InventarioRepository inventarioRepo, InventarioMapper inventarioMap,
-			ProductoRepository productoRepo) {
+	
+
+	public InventarioServiceImpl(InventarioRepository inventarioRepo, InventarioProductoMapper inventarioProMap,
+			InventarioMapper inventarioMap, ProductoRepository productoRepo) {
+		super();
 		this.inventarioRepo = inventarioRepo;
+		this.inventarioProMap = inventarioProMap;
 		this.inventarioMap = inventarioMap;
 		this.productoRepo = productoRepo;
 	}
 
 	@Override
-	public List<InventarioResponseDTO> findInventarioByProductoId(Long productoId) {
+	public List<InventarioProductoResponseDTO> findInventarioByProductoId(Long productoId) {
 		
-		List<Inventario> inventarios = inventarioRepo.findByIdProductoId(productoId);
-        
-		if (inventarios.isEmpty()) {
+		Producto prod = productoRepo.findById(productoId)
+		         .orElseThrow(() -> new EntityNotFoundException("Producto no encontrado"));
+		 
+		List<Inventario> invs = inventarioRepo.findByIdProductoId(productoId);
+		
+		if (invs.isEmpty()) {
             throw new EntityNotFoundException("No hay inventario para el producto con id " + productoId);
         }
         
-        return inventarios.stream()
-                .map(inventarioMap::enDTO)
-                .toList();
+        return List.of(inventarioProMap.toProductoWithVariantsDTO(prod, invs));
         
 	}
 
 	@Override
-	public InventarioResponseDTO findProductoByVariant(Long productoId, String talla, String color) {
+	public InventarioVariantDTO findProductoByVariant(Long productoId, String talla, String color) {
 		
 		Inventario inv = inventarioRepo.findByIdProductoIdAndIdTallaAndIdColor(productoId, talla, color)
                 .orElseThrow(() -> new EntityNotFoundException(
@@ -58,55 +68,52 @@ public class InventarioServiceImpl implements InventarioService{
                     ", talla = " + talla +
                     ", color = " + color));
 		
-        return inventarioMap.enDTO(inv);
+        return inventarioProMap.toVariantDTO(inv);
         
 	}
 
 	@Override
-	public List<InventarioResponseDTO> findProductosLowStock(Long productoId, int minStock) {
+	public List<InventarioProductoResponseDTO> findProductosLowStock(Long productoId, int minStock) {
 
-		List<Inventario> lista = inventarioRepo.lowStockByProducto(productoId, minStock);
-        if (lista.isEmpty()) {
+		Producto prod = productoRepo.findById(productoId)
+	            .orElseThrow(() -> new EntityNotFoundException("Producto no encontrado"));
+		
+		List<Inventario> low = inventarioRepo.lowStockByProducto(productoId, minStock);
+		
+		if (low.isEmpty()) {
             throw new EntityNotFoundException("No hay inventarios con stock < " + minStock +
                                               " para producto " + productoId);
         }
         
-        return lista.stream()
-                .map(inventarioMap::enDTO)
-                .toList();
+        return List.of(inventarioProMap.toProductoWithVariantsDTO(prod, low));
         
 	}
 
 	@Override
 	public List<InventarioResponseDTO> findProductoAndTalla(Long productoId, String talla) {
 		
-		List<Inventario> lista = inventarioRepo.findByIdProductoIdAndIdTalla(productoId, talla);
+		List<Inventario> invs = inventarioRepo.findByIdProductoIdAndIdTalla(productoId, talla);
 		
-		
-        if (lista.isEmpty()) {
-            throw new EntityNotFoundException("No hay inventarios para producto = " + productoId +
-                                              ", talla = " + talla);
+		if (invs.isEmpty()) {
+            throw new EntityNotFoundException("No hay inventarios con la " + talla +
+                                              " para producto " + productoId);
         }
         
-        return lista.stream()
-                .map(inventarioMap::enDTO)
-                .toList();
+        return invs.stream().map(inventarioMap::enDTO).collect(Collectors.toList());
         
 	}
 
 	@Override
 	public List<InventarioResponseDTO> findProductoAndColor(Long productoId, String color) {
 
-		List<Inventario> lista = inventarioRepo.findByIdProductoIdAndIdColor(productoId, color);
+		List<Inventario> invs = inventarioRepo.findByIdProductoIdAndIdColor(productoId, color);
         
-		if (lista.isEmpty()) {
+		if (invs.isEmpty()) {
             throw new EntityNotFoundException("No hay inventarios para producto = " + productoId +
                                               ", color = " + color);
         }
         
-        return lista.stream()
-                .map(inventarioMap::enDTO)
-                .toList();
+        return invs.stream().map(inventarioMap::enDTO).collect(Collectors.toList());
         
 	}
 
@@ -119,34 +126,34 @@ public class InventarioServiceImpl implements InventarioService{
                 .orElseThrow(() -> new EntityNotFoundException("Producto no encontrado"));
         
         inv.setProducto(prod);
+        inventarioRepo.save(inv);
         
-        Inventario guardado = inventarioRepo.save(inv);
-        
-        return inventarioMap.enDTO(guardado);
+        return inventarioMap.enDTO(inv);
         
 	}
 
 	@Override
-	public List<InventarioResponseDTO> reabastecerInventarioDeProducto(ReabastecerProductoDTO reabastecerDTO) {
+	public List<InventarioVariantDTO> reabastecerInventarioDeProducto(ReabastecerProductoDTO reabastecerDTO) {
 
 		Long productoId = reabastecerDTO.getProductoId();
-        
-		return reabastecerDTO.getItems().stream()
-            .map(item -> {
-            	
-                Inventario inv = inventarioRepo.findByIdProductoIdAndIdTallaAndIdColor(
-                        productoId, item.getTalla(), item.getColor())
-                    .orElseThrow(() -> new EntityNotFoundException(
-                        "No se encontró inventario talla = " + item.getTalla() +
-                        ", color = " + item.getColor()));
-                
-                inv.setStock(inv.getStock() + item.getCantidad());
-                inv.setUltimaActualizacion(LocalDateTime.now());
-                
-                return inventarioMap.enDTO(inventarioRepo.save(inv));
-                
-            })
-            .toList();
+
+	    List<Inventario> actualizados = reabastecerDTO.getItems().stream()
+	        .map(item -> {
+	            Inventario inv = inventarioRepo
+	                .findByIdProductoIdAndIdTallaAndIdColor(productoId, item.getTalla(), item.getColor())
+	                .orElseThrow(() -> new EntityNotFoundException(
+	                    "No se encontró inventario talla = " + item.getTalla() +
+	                    ", color = " + item.getColor()
+	                ));
+	            
+	            inv.setStock(inv.getStock() + item.getCantidad());
+	            inv.setUltimaActualizacion(LocalDateTime.now());
+	            
+	            return inventarioRepo.save(inv); // devolvemos el guardado
+	        })
+	        .toList();
+
+	    return inventarioProMap.toVariantsDTOs(actualizados);
 
 	}
 
